<?xml version="1.0"?>
<package>
  <name>uoe_rbdl</name>
  <version>2.6.0</version>
  <description>Catkin wrapper for RBDL</description>

  <maintainer email="quentin.rouxel@ed.ac.uk">Leph</maintainer>

  <license>ZLIB</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>cmake</buildtool_depend>
  <build_depend>eigen</build_depend>
  <exec_depend>eigen</exec_depend>
</package>
