<?xml version="1.0"?>
<package format="2">
  <name>rbdl_catkin</name>
  <version>2.6.0</version>
  <description>Catkin wrapper for RBDL</description>

  <maintainer email="quentin.rouxel@ed.ac.uk">Leph</maintainer>
  <maintainer email="wolfgang.merkt@ed.ac.uk">Wolfgang Merkt</maintainer>

  <license>ZLIB</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>cmake</buildtool_depend>
  <build_depend>eigen</build_depend>
  <exec_depend>eigen</exec_depend>
</package>
